# xmltoxsd

./: LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_schema_inferer.py  test_xml_parser.py  test_xsd_generator.py
tests/xml_files/: attributes.xml  data_types.xml  invalid.xml  nested_elements.xml  valid_basic.xml
xmltoxsd/: __init__.py  schema_inferer.py  xml_parser.py  xsd_generator.py
