[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmltoxsd"
version = "0.1.0"
authors = [{name = "Mustansir Godhrawala", email = "mustansirgodhrawala9@gmail.com"}]
description = "A library for converting XML documents to XSD schemas."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["XML", "XSD", "schema", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
urls = {homepage = "https://github.com/Mustangodhra/xmltoxsd"}

dependencies = [
    "lxml>=4.6.3",
]

requires-python = ">=3.6"
